--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.7",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
@@ -25,9 +28,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "echarts": "^5.6.0",
+    "formik": "^2.4.6",
     "framer-motion": "^12.6.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.13.2",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -38,6 +43,7 @@
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
+    "yup": "^1.6.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
