--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.13.2",
     "next": "15.2.4",
+    "qz-tray": "^2.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
@@ -53,6 +54,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/qz-tray": "^2.2.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
