--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "echarts": "^5.6.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.3",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
     "mongoose": "^8.13.2",
