--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "use-debounce": "^10.0.4",
