--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "15.2.4",
     "qz-tray": "^2.2.4",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
