--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "echarts": "^5.6.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.3",
     "html2canvas": "^1.4.1",
@@ -55,6 +56,7 @@
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "use-debounce": "^10.0.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1",
     "zod": "^3.24.2"
   },
@@ -62,6 +64,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/file-saver": "^2.0.7",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/qz-tray": "^2.2.1",
