--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
     "mongoose": "^8.13.2",
-    "next": "15.2.4",
+    "next": "^15.2.6",
+    "next-themes": "^0.4.6",
     "qz-tray": "^2.2.4",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
